Fixes and Image in Side Panel
Fix an issue where marker symbols were not showing.
Add thumbnail images for each park to side panel.

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,13 @@
     background-size: 26px;
 }
 
-.image {
-    width: 200px;
-    height: 150px;
+.img {
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    padding: 5px;
+    width: 50px;
+}
+
+img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
